--- a/.github/workflows/demo-1_learn_github_actions.yaml
+++ b/.github/workflows/demo-1_learn_github_actions.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Installer Node 14
         uses: actions/setup-node@v3
         with:
-          nose-version: '14'
+          node-version: '14'
       - name: Installer bats
         run: npm install -g bats
       - name: Retourner la version des bats
