--- a/.github/workflows/demo-3_env-if.yml
+++ b/.github/workflows/demo-3_env-if.yml
@@ -13,5 +13,5 @@ jobs:
         if: ${{ env.NAME != 'Jojo' }}
         run: echo "Salut toi ! Tu n'es pas Jojo ? oO"
       - name: Coucou Jojo
-        if: ${{ env.anme == 'Jojo' }}
+        if: ${{ env.NAME == 'Jojo' }}
         run: echo "Coucou Jojo ! Tu as bonne mine <3"
